2007-02-14  Tim-Philipp Müller  <tim at centricular dot net>

        * src/conn-http.c: (gnet_conn_http_reset),
	(gnet_conn_http_free_event):
	  Fix two small memory leaks.

2007-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* src/unix.c: (gnet_unix_socket_unlink):
	  Make this function static, it's an internal utility function.
	  Also shuffle a few macros around.

2007-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Zeeshan Ali <zeenix gmail com>

	* AUTHORS:
	* NEWS:
	* configure.ac:
	* doc/gnet-sections.txt:
	* doc/tmpl/unix.sgml:
	* examples/echoclient-unix.c:
	* examples/echoserver-unix.c:
	* src/unix.c: (gnet_sun_len), (gnet_unix_socket_new_internal),
	(gnet_unix_socket_new),	(gnet_unix_socket_new_abstract),
	(gnet_unix_socket_unref), (gnet_unix_socket_server_new_internal),
	(gnet_unix_socket_server_new), (gnet_unix_socket_server_new_abstract):
	* src/unix.h:
	* tests/client_server_test.pl:
	  API: gnet_unix_socket_new_abstract()
	  API: gnet_unix_socket_server_new_abstract()
	  Add support for abstract unix sockets. If not supported on the
	  platform used, the new functions will try to create normal unix
	  sockets. (#404583)

2007-02-01  Tim-Philipp Müller  <tim at centricular dot net>

        * doc/tmpl/base64.sgml:
        * doc/tmpl/conn-http.sgml:
        * doc/tmpl/conn.sgml:
        * doc/tmpl/gnet.sgml:
        * doc/tmpl/inetaddr.sgml:
        * doc/tmpl/iochannel.sgml:
        * doc/tmpl/ipv6.sgml:
        * doc/tmpl/mcast.sgml:
        * doc/tmpl/md5.sgml:
        * doc/tmpl/pack.sgml:
        * doc/tmpl/server.sgml:
        * doc/tmpl/sha.sgml:
        * doc/tmpl/socks.sgml:
        * doc/tmpl/tcp.sgml:
        * doc/tmpl/udp.sgml:
        * doc/tmpl/unix.sgml:
        * doc/tmpl/uri.sgml:
	  Update.

2007-02-01  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: Zeeshan Ali  <zeenix at gmail.com>

	* NEWS:
	* src/unix.c: (gnet_unix_socket_new), (gnet_unix_socket_server_new):